# ligadoAi_cous_opentracy

./: .gitignore  README.md  config.example.toml  pyproject.toml
.cous-data/: measurements.json
cous/: __init__.py  auth.py  bootstrap.py  callback_server.py  config.py  logger.py  main.py  mocks.py
cous/application/: __init__.py  feedback.py  session.py
cous/cli/: __init__.py  commands.py  renderer.py  terminal.py
cous/cli/tui/: app.py  events.py  output_router.py  poller.py  state.py
cous/cli/tui/widgets/: bottombar.py  chat.py  log_panel.py  sidebar.py  stages.py  status.py  statusbar.py  topbar.py
cous/clients/: __init__.py  base.py  diagnosis.py  knowledge.py  measurements.py  opentracy.py  system_prompt.py
cous/contracts/: __init__.py  callback_handler.py  v3_schemas.py
cous/knowledge/: metadata.py
cous/measurements/: __init__.py  analysis.py  constants.py  diagnosis.py  serial_capture.py  store.py  validation.py
docs/: ARQUITETURA.md  FILTROS_CLASSIFICACAO.md  MANUAL.md
scripts/: __init__.py  smoke_diagnosis.py
tests/: conftest.py  test_auth.py  test_bootstrap.py  test_chat_sessions.py  test_commands.py  test_config.py  test_diagnosis_callback.py  test_diagnosis_rendering.py  test_feedback.py  test_logger.py  test_measurements_client.py  test_measurements_store.py  test_metadata.py  test_output_router.py  test_serial_capture.py  test_smoke_diagnosis.py  test_system_prompt.py  test_terminal_integration.py  test_terminal_mode.py  test_tui_state.py
